Code refactored. Fixed scrollbar on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@ body {
     background:#dbad1648;
     user-select: none;
     cursor: default;
+    overflow: hidden;
 }
 
 .wrapper {
